# youkoso

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: config.rs  database.rs  main.rs  my_studio.rs  scheduler.rs  spreadsheet.rs  ui.rs  xlsx.rs
src/config/: error.rs
src/database/: error.rs
src/my_studio/: error.rs
src/scheduler/: error.rs
src/spreadsheet/: error.rs
ui/: app.slint  settings.slint
