[package]
name = "youkoso"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
calamine = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.12"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"

[build-dependencies]
slint-build = "1.12"
