[package]
name = "youkoso"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
calamine = "0.30"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = "1.12"
thiserror = "2.0"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.47", features = ["full"] }
toml = "0.9"

[build-dependencies]
slint-build = "1.12"
