[package]
name = "youkoso"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
calamine = "0.33"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "1.15", features = ["live-preview"] }
thiserror = "2.0"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1.49", features = ["full"] }
toml = "1.0"

[build-dependencies]
slint-build = "1.15"
